# emlin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: dh.h  emlin.h
src/: CMakeLists.txt  dh.c  emlin.c
