CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(emlin C)

include(GNUInstallDirs)
include(appversion.cmake)

find_package(emelf REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/build)

ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=700 -O2 -DEMLIN_VERSION="${APP_VERSION}")

ADD_SUBDIRECTORY(src)

# vim: tabstop=4
